1. Add "ask for a review" feature.