@@ -1,1 +1,3 @@
-1. Add "ask for a review" feature.
+1. Add ad filtering to the trader screen.
+2. Fix image quality in the trade chat.
+3. Add an icon for recent notifications.
